...
                      mainAxisAlignment: MainAxisAlignment.spaceBetween,
                      children: [
                        // Start button
                        Padding(
                          padding: const EdgeInsets.only(bottom: 7),
                          child: StandardElevatedButton(
                            key: const Key("Start_Button"),
                            onPressed: () => settings.handleStartPress(context),
                            child: const Text(
                              'Start',
                              style: TextStyle(color: Colors.amber),
                            ),
                          ),
...
